--- a/views/forecast.html
+++ b/views/forecast.html
@@ -11,7 +11,7 @@
 
         <h2>{{ data.name }},
             {{data.sys.country}}</h2>
-        <img src="https://openweathermap.org/img/wn/{{data.weather[0].icon}}.png" alt="{{data.weather[0].description}}">
+        <img class="condition_icon" src="images/icons/{{data.weather[0].icon}}@2x.png" alt="{{data.weather[0].description}}">
         <p>{{data.weather[0].main}}…{{data.weather[0].description}}</p>
         <p>Feels like:
             {{data.main.feels_like | round }}°</p>
