--- a/views/index.html
+++ b/views/index.html
@@ -7,5 +7,5 @@
 
 <p id="statusText"></p>
 
-<!-- <script src="js/getLocation_Redirect.js"></script> -->
+<script src="js/getLocation_Redirect.js"></script>
 {% endblock %}
