--- a/views/layout.html
+++ b/views/layout.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="Get the weather in your current location">
     {% block head %}
     {% endblock %}
 
